Fixed some responsive issues that cropped up as a result of adding ImageLoader containers to file structure

--- a/src/components/ImageLoader/ImageLoader.style.scss
+++ b/src/components/ImageLoader/ImageLoader.style.scss
@@ -1,4 +1,12 @@
 .image {
+  &__loader {
+    width: 650px;
+  }
+  &__hero {
+    &__loader {
+      width: 800px;
+    }
+  }
   &--loading {
     opacity: 0;
     width: 100%;
